# gridscape

./: .gitignore  LICENSE  Makefile  README.md  build.sh  clean_pufferl.py  demo.py  pyproject.toml  run.sh  setup.py
config/: default.ini  gridscape.ini  pong.ini  template.ini
gridscape/: client.c  client.h  cy_gridscape.pyx  gridscape.c  gridscape.h  gridscape.py  todo.md
include/: client.h  gridscape.h
policies/: __init__.py  environment.py  policy.py
pufferlib/: extensions.pyx  puffernet.h
src/: client.c  gridscape.c  main.c
