[build-system]
requires = ["setuptools>=42", "wheel", "Cython>=0.29.24", "numpy"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "requires-python"]
name = "PufferMini"
description = "A miniture Pufferlib environment for dev"
keywords = []
classifiers = [
	"Natural Language :: English",
	"Operating System :: POSIX :: Linux",
	"Operating System :: MacOS :: MacOS X",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "einops",
    "pufferlib[cleanrl,ray]>=2.0.0",
    "torch>=2.4",
    "triton>=3",
    "torchvision",
    "wandb",
    "gym==0.23",
    "matplotlib",
    "mediapy",
    "GPUtil",
    'numpy',
    'opencv-python==3.4.17.63',
    'rich',
    'rich_argparse',
    'gymnasium',
    'pettingzoo',
    'shimmy[gym-v21]',
    'psutil==5.9.5',
    'pynvml',
    'imageio'
]
[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
monitoring = [
    "nvitop"
]
dev = [
    "ruff"
]

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]